--- a/supermercado/.classpath
+++ b/supermercado/.classpath
@@ -24,7 +24,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/elato/git/proyecto_supermercado/supermercado/lib/jcalendar-1.4.zip"/>
-	<classpathentry kind="lib" path="C:/Users/elato/git/proyecto_supermercado/supermercado/lib/jcalendar-1.4/lib/jcalendar-1.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/elato/git/proyecto_supermercado/supermercado/lib/jcalendar-1.4.zip"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/elato/git/proyecto_supermercado/supermercado/lib/jcalendar-1.4/lib/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
