--- a/supermercado/pom.xml
+++ b/supermercado/pom.xml
@@ -28,7 +28,21 @@
     <artifactId>jakarta.transaction-api</artifactId>
     <version>2.0.1</version>
   </dependency>
+  
+  <dependency>
+  <groupId>com.formdev</groupId>
+  <artifactId>flatlaf</artifactId>
+  <version>3.1.1</version>
+</dependency>
+
+    <dependency>
+        <groupId>com.toedter</groupId>
+        <artifactId>jcalendar</artifactId>
+        <version>1.4</version>
+    </dependency>
 </dependencies>
+
+
 
 </project>
 
